--- a/labs/Firefly/assets/css/dragItem.css
+++ b/labs/Firefly/assets/css/dragItem.css
@@ -1,38 +1,1 @@
-.dragItem
-{
-	float: left;
-	width: 100px;
-	height: 100px;
-	vertical-align: middle;
-	display:flex;
-}
-
-.dragItem:hover
-{
-	border: solid 1px #E3E3E3;
-}
-
-.dragItem.selected
-{
-	border: solid 1px #3399FF;
-	background-color: #F5FAFF;
-}
-
-.dragItem img
-{
-	max-width: 90px;
-	max-height: 90px;
-	margin: auto;
-}
-
-.dragItemSnapshot
-{
-	position: absolute;
-}
-
-.dragItemSnapshot img
-{
-	max-width: 45px;
-	max-height: 45px;
-	border: dashed 1px #000000;
-}
+.dragItem{float:left;width:100px;height:100px;vertical-align:middle;display:flex}.dragItem:hover{border:solid 1px #e3e3e3}.dragItem.selected{border:solid 1px #39f;background-color:#f5faff}.dragItem img{max-width:90px;max-height:90px;margin:auto}.dragItemSnapshot{position:absolute}.dragItemSnapshot img{max-width:45px;max-height:45px;border:dashed 1px #000}
