--- a/labs/Firefly/assets/css/index.css
+++ b/labs/Firefly/assets/css/index.css
@@ -1,94 +1,1 @@
-@import url("icon/iconfont.css");
-
-html,body
-{
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	margin: 0;
-}
-#topMenu
-{
-	margin: 0;
-	border-radius: 0;
-}
-
-#topMenu .header.item
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-}
-
-#mainLayout #leftBox
-{
-	background-color: #ffffff;
-	padding: 5px;
-}
-
-#mainLayout #centerBox
-{
-	background-color: #E3E3E3;
-}
-
-#mainLayout #rightBox
-{
-	background-color: #ffffff;
-}
-
-#mainLayout .vDivide
-{
-	background-color: #CCCCCC;
-	position: absolute;
-	width: 5px;
-}
-
-#mainLayout .vDivide .handle
-{
-	width: 5px;
-	height: 60px;
-	margin-top: -30px;
-	background-color:#00ACED;
-	position: absolute;
-	top:50%;
-	cursor: pointer;
-}
-
-#mainLayout .vDivide .handle:hover
-{
-	background-color:#00719B;
-}
-
-#propertiesPanel #header
-{
-	background-color: #333333;
-	color: #FFFFFF;
-	line-height: 24px;
-	padding-left: 4px;
-	height: 24px;
-}
-
-.colorPicker
-{
-	border:solid 1px #000000;
-	width:27px;
-	height:27px;
-	background-color: #ffffff;
-	margin: 10px;
-	border-radius: 5px;
-}
-
-.colorPicker:hover
-{
-	border: solid 1px #999999;
-}
-
-.colorPicker .box
-{
-	background-color: #FFFFFF;
-	width: 21px;
-	height: 21px;
-	margin: 2px;
-	border-radius: 4px;
-	border: solid 1px #e3e3e3;
-}
+@import url("icon/iconfont.css");html,body{width:100%;height:100%;overflow:hidden;margin:0}#topMenu{margin:0;border-radius:0}#topMenu .header.item{padding-top:0;padding-bottom:0;padding-left:0}#mainLayout #leftBox{background-color:#fff;padding:5px}#mainLayout #centerBox{background-color:#e3e3e3}#mainLayout #rightBox{background-color:#fff}#mainLayout .vDivide{background-color:#ccc;position:absolute;width:5px}#mainLayout .vDivide .handle{width:5px;height:60px;margin-top:-30px;background-color:#00aced;position:absolute;top:50%;cursor:pointer}#mainLayout .vDivide .handle:hover{background-color:#00719b}#propertiesPanel #header{background-color:#333;color:#fff;line-height:24px;padding-left:4px;height:24px}.colorPicker{border:solid 1px #000;width:27px;height:27px;background-color:#fff;margin:10px;border-radius:5px}.colorPicker:hover{border:solid 1px #999}.colorPicker .box{border-radius:6px;border:solid 2px #e3e3e3;width:100%;height:100%}.iconPicker{border:solid 1px #000;background-image:url(../image/alphaBg.png);border-radius:5px}.iconPicker:hover{border:solid 1px #999}.cp-color-picker{z-index:1000}
