--- a/labs/Firefly/assets/css/scaleTool.css
+++ b/labs/Firefly/assets/css/scaleTool.css
@@ -1,39 +1,1 @@
-.scaleTool
-{
-	position: absolute;
-}
-
-.scaleTool .box
-{
-	position:absolute;
-	border:solid 1px #3399FF;
-	background-color: rgba(255, 255, 0, 0.1);
-	pointer-events: none;
-}
-
-.scaleTool .controlBtn
-{
-	position: absolute;
-}
-
-.scaleTool .controlBtn:hover .circle
-{
-	background-color: #FF851B;
-}
-
-.scaleTool .controlBtn.selected .circle
-{
-	background-color: #FF851B;
-}
-
-.scaleTool .controlBtn .circle
-{
-	width: 10px;
-	height: 10px;
-	border: solid 1px #000000;
-	background-color: #FFFFFF;
-	position: absolute;
-	left: -5px;
-	top:-5px;
-	border-radius: 5px;
-}
+.scaleTool{position:absolute}.scaleTool .box{position:absolute;border:solid 1px #39f;background-color:rgba(255,255,0,0.1);pointer-events:none}.scaleTool .controlBtn{position:absolute}.scaleTool .controlBtn:hover .circle{background-color:#ff851b}.scaleTool .controlBtn.selected .circle{background-color:#ff851b}.scaleTool .controlBtn .circle{width:10px;height:10px;border:solid 1px #000;background-color:#fff;position:absolute;left:-5px;top:-5px;border-radius:5px}
