--- a/labs/Painter/assets/css/imageItem.css
+++ b/labs/Painter/assets/css/imageItem.css
@@ -1,47 +1,1 @@
-.imageItem
-{
-	width: 82px;
-	height: 82px;
-	border: solid 1px #E3E3E3;
-	border-radius: 5px;
-	float: left;
-	margin: 5px;
-	cursor: pointer;
-}
-.imageItem div:first-child
-{
-	width: 70px;
-	height: 70px;
-	margin: 5px;
-	border-radius: 5px;
-	position: absolute;
-}
-
-.imageItem .icon
-{
-	position: absolute;
-	margin-left: 24px;
-	margin-top: 25px;
-	display: none;
-}
-
-.imageItem:hover
-{
-	border: solid 1px #999999;
-}
-
-.imageItem.selected
-{
-	cursor: default;
-	border: solid 2px #ff00FF;
-}
-
-.imageItem.selected div:first-child
-{
-	margin: 4px;
-}
-
-.imageItem.selected .icon
-{
-	display: block;
-}
+.imageItem{width:82px;height:82px;border:solid 1px #e3e3e3;border-radius:5px;float:left;margin:5px;cursor:pointer}.imageItem div:first-child{width:70px;height:70px;margin:5px;border-radius:5px;position:absolute}.imageItem .icon{position:absolute;margin-left:24px;margin-top:25px;display:none}.imageItem:hover{border:solid 1px #999}.imageItem.selected{cursor:default;border:solid 2px #f0f}.imageItem.selected div:first-child{margin:4px}.imageItem.selected .icon{display:block}
