--- a/labs/Painter/assets/css/index.css
+++ b/labs/Painter/assets/css/index.css
@@ -1,119 +1,1 @@
-html,body
-{
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	margin: 0;
-}
-#preload
-{
-	position: absolute;
-	display: none;
-}
-#topMenu
-{
-	margin: 0;
-	border-radius: 0;
-}
-
-#topMenu .header.item
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-}
-
-#mainLayout #leftBox
-{
-	background-color: #ffffff;
-	padding: 5px;
-}
-
-#mainLayout #centerBox
-{
-	background-color: #E3E3E3;
-}
-
-#mainLayout #rightBox
-{
-	background-color: #ffffff;
-}
-
-#mainLayout #rightBox #topBox,#bottomBox
-{
-	background-color: #ffffff;
-}
-
-#mainLayout .vDivide
-{
-	background-color: #CCCCCC;
-	position: absolute;
-	width: 5px;
-}
-
-#mainLayout .vDivide .handle
-{
-	width: 5px;
-	height: 60px;
-	margin-top: -30px;
-	background-color:#00ACED;
-	position: absolute;
-	top:50%;
-	cursor: pointer;
-}
-
-#mainLayout .hDivide
-{
-	background-color: #CCCCCC;
-	position: absolute;
-	height: 5px;
-	width: 100%;
-}
-
-#mainLayout .hDivide .handle
-{
-	width: 60px;
-	height: 5px;
-	cursor: pointer;
-	background-color:#00ACED;
-	margin: auto;
-}
-
-#mainLayout .vDivide .handle:hover
-{
-	background-color:#00719B;
-}
-
-#propertiesPanel #header
-{
-	background-color: #e3e3e3;
-	color: #333333;
-	line-height: 24px;
-	padding-left: 4px;
-	height: 24px;
-}
-
-.colorPicker
-{
-	border:solid 1px #000000;
-	width:27px;
-	height:27px;
-	background-color: #ffffff;
-	margin: 10px;
-	border-radius: 5px;
-}
-
-.colorPicker:hover
-{
-	border: solid 1px #999999;
-}
-
-.colorPicker .box
-{
-	background-color: #FFFFFF;
-	width: 21px;
-	height: 21px;
-	margin: 2px;
-	border-radius: 4px;
-	border: solid 1px #e3e3e3;
-}
+html,body{width:100%;height:100%;overflow:hidden;margin:0}#preload{position:absolute;display:none}#topMenu{margin:0;border-radius:0}#topMenu .header.item{padding-top:0;padding-bottom:0;padding-left:0}#mainLayout #leftBox{background-color:#fff;padding:5px}#mainLayout #centerBox{background-color:#e3e3e3}#mainLayout #rightBox{background-color:#fff}#mainLayout #rightBox #topBox,#bottomBox{background-color:#fff}#mainLayout .vDivide{background-color:#ccc;position:absolute;width:5px}#mainLayout .vDivide .handle{width:5px;height:60px;margin-top:-30px;background-color:#00aced;position:absolute;top:50%;cursor:pointer}#mainLayout .hDivide{background-color:#ccc;position:absolute;height:5px;width:100%}#mainLayout .hDivide .handle{width:60px;height:5px;cursor:pointer;background-color:#00aced;margin:auto}#mainLayout .vDivide .handle:hover{background-color:#00719b}#propertiesPanel #header{background-color:#e3e3e3;color:#333;line-height:24px;padding-left:4px;height:24px}.colorPicker{border:solid 1px #000;width:27px;height:27px;background-color:#fff;margin:10px;border-radius:5px}.colorPicker:hover{border:solid 1px #999}.colorPicker .box{background-color:#fff;width:21px;height:21px;margin:2px;border-radius:4px;border:solid 1px #e3e3e3}
